--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "classnames": "^2.2.6",
     "normalize.css": "^8.0.0",
     "react": "^16.5.1",
+    "react-anchor-link-smooth-scroll": "^1.0.11",
     "react-dom": "^16.5.1",
     "react-modal": "^3.5.1",
     "react-router-dom": "^4.3.1",
