--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.11",
     "react-dom": "^16.5.1",
     "react-modal": "^3.5.1",
+    "react-rangeslider": "^2.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
